--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -42,8 +42,8 @@
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789475.md#1">云南城投集团债务缠身 甩卖资产求生</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11788346.md#1">台湾民主选举 北京穷于应对</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790196.md#1">柯文哲：共产党是国民党的猪队友</a><br>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791068.md#1">签署协议前 美从外汇操纵国名单中移除中国</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791244.md#1">美议员告诫中共尊重台湾自由：对两岸都有益</a><br>
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791068.md#1">签署协议前 传美将移除中国外汇操纵国标签</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790794.md#1">92届奥斯卡金像奖提名公布 颁奖礼不设主持人</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790901.md#1">一年倒闭近2万家 大陆游戏公司陷窘境</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790922.md#1">十家九亏 大陆去年超3000奶茶企业倒闭</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,778,665 人
+- 共 349,778,676 人
 ```
 </strong>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
